// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is the Tv quote valid All items need to have a character 1`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": Any<String>,
  "season": 1,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a character 2`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": Any<String>,
  "season": 1,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a episode 1`] = `
Object {
  "character": "",
  "episode": Any<Number>,
  "quote": "TEST",
  "season": 1,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a episode 2`] = `
Object {
  "character": "",
  "episode": Any<Number>,
  "quote": "76745645",
  "season": 1,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a quote 1`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": Any<String>,
  "season": 1,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a quote 2`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": Any<String>,
  "season": 1,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a season 1`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": "TEST",
  "season": Any<Number>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a season 2`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": "76745645",
  "season": Any<Number>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a title 1`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": "TEST",
  "season": 1,
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a title 2`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": "76745645",
  "season": 1,
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Tv quote valid All items need to have a year 1`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": "TEST",
  "season": 1,
  "title": "",
  "year": Any<Number>,
}
`;

exports[`is the Tv quote valid All items need to have a year 2`] = `
Object {
  "character": "",
  "episode": 1,
  "quote": "76745645",
  "season": 1,
  "title": "",
  "year": Any<Number>,
}
`;
